--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <link rel="stylesheet" href="./assets/css/style.css
     "/>
     <script src="./assets/js/typed.js" defer></script>
+
   </head>
 
   <body>
     <header class="header">
-      <img src="./assets/img/kaua.svg" alt="Lobo" width="104" height="38" />
+      <a href="https://github.com/kkkkkaua"><img src="./assets/img/kaua.svg" alt="Kaua" width="104" height="38" /></a>
       <nav>
         <ul class="header-menu">
           <li><a href="#experiencia">Experiência</a></li>
@@ -39,7 +40,7 @@
         <p class="experiencia-texto">
           Desenvolvo pequenos projetos como o Bikcraft utilizando apenas
           <strong>HTML</strong>, <strong>CSS</strong> e
-          <strong>JavaScript</strong>. Meu ultimo projeto foi o
+          <strong>JavaScript</strong>. Meu último projeto foi o
           <strong>PROJETO:HAWK</strong> onde trabalhei como dev
           <strong>Front-End</strong> no projeto.
         </p>
@@ -132,7 +133,7 @@
             <li class="faculdade">
               <span class="faculdade-tipo">Ensino Médio com TI integrado</span>
               <h3 class="faculdade-curso">Design de Website</h3>
-              <span class="faculdade-instituicao">110 Horas</span>
+              <span class="faculdade-instituicao">Aprox. <br>110 Horas</span>
             </li>
 
             <li class="faculdade">
@@ -217,7 +218,7 @@
             <a class="insta" href="tel:+5511981394226">+11 9 8139 4226</a>
           </li>
           <li>
-            <a class="insta" href="https://www.instagram.com/kmat0s">@kmat0s</a>
+            <a class="insta" href="https://www.instagram.com/kmat0s">@fpkaua_</a>
           </li>
           <a href="https://github.com/kkkkkaua"
             ><img src="./assets/img/git_icon.svg"
@@ -227,5 +228,6 @@
       </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
+    <script src="./assets/js/index.js"></script>
   </body>
 </html>
