--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
         <div>
           <p class="formacao-texto">
             Minha mais recente experiência acadêmica foi o
-            <strong>Ensino Médio com o curso técnico integrado</strong> que fiz
+            <strong>Ensino Médio com o Curso Técnico integrado</strong> que fiz
             no <strong>UNASP Campus São Paulo</strong>. Além disso, irei cursar
-            <strong>Ciências da Computação</strong> no mesmo colégio.
+            <strong>Ciências da Computação</strong> no mesmo centro universitário.
           </p>
 
           <ul class="faculdade-lista">
@@ -143,7 +143,7 @@
               >HTML e CSS para Iniciantes</a
             >
               <h3 class="faculdade-curso">Nivel: Iniciante</h3>
-              <span class="faculdade-instituicao">74 Horas</span>
+              <span class="faculdade-instituicao">46 Horas</span>
             </li>
 
             <li class="faculdade">
