--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
           </h3>
           <span class="empresa-titulo">Front-End</span>
           <p class="empresa-texto">
-            Nesse projeto eu utilizei em sua maior parte JS, aprendido no curso
-            da Origamid.
+            Nesse projeto eu utilizei em sua maior parte JS, trabalhando os conceitos essênciais de JavaScript e concretizando os fundamentos do curso.
           </p>
           <ul class="empresa-habilidades">
             <li>HTML</li>
