--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
     </main>
 
-    <section class="experiencia" id="experiencia" aria-label="Experiência">
+    <section class="experiencia" id="experiencia" aria-label="Experiência" data-section>
       <h2 class="subtitulo">Experiência</h2>
       <div>
         <p class="experiencia-texto">
@@ -116,7 +116,7 @@
         </div>
     </section>
 
-    <section class="formacao" id="formacao" aria-label="Formação">
+    <section class="formacao" id="formacao" aria-label="Formação" data-section>
       <div class="formacao-container">
         <h2 class="subtitulo">Formação</h2>
 
@@ -201,7 +201,7 @@
       </div>
     </section>
 
-    <footer class="footer" id="contato">
+    <footer class="footer" id="contato" data-section>
       <div class="footer-container">
         <p class="footer-txt">
           Estou disponivel para novos projetos no momento. Entre em contato
@@ -226,6 +226,7 @@
         <p class="footer-copy">Kauã. Alguns direitos reservados.</p>
       </div>
     </footer>
+    <script src="index.js" type="module"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
     <script src="./assets/js/index.js"></script>
   </body>
