--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
 
     <main class="introducao">
-      <img src="./assets/img/81395993_2557487207912078_4606950189918322688_n.png" alt="Lobo Cinza" width="360" height="520" />
+      <img src="./assets/img/81395993_2557487207912078_4606950189918322688_n(5).png" alt="Foto do Dev" width="360" height="520" />
       <div>
         <h1>Estudante<br />Front End<br /></h1>
         <span class="typing text"></span>
@@ -52,8 +52,7 @@
           </h3>
           <span class="empresa-titulo">Front-End</span>
           <p class="empresa-texto">
-            No projeto Bikcraft eu trabalhei no desenvolvimento completo do
-            HTML, CSS e JavaScript do site.
+            No projeto Bikcraft eu trabalhei no desenvolvimento completo da aplicação para consulta e venda de bicicletas.
           </p>
           <ul class="empresa-habilidades">
             <li>HTML</li>
@@ -69,9 +68,7 @@
           </h3>
           <span class="empresa-titulo">Front-End</span>
           <p class="empresa-texto">
-            Nesse projeto eu trabalhei utilizando o pré-processador SASS,
-            <br />
-            fora o desenvolvimento da estrutura HTML.
+            Nesse projeto eu produzi uma aplicação para um restaurante, onde contém seu cardápio digital.
           </p>
           <ul class="empresa-habilidades">
             <li>HTML</li>
@@ -87,8 +84,7 @@
           </h3>
           <span class="empresa-titulo">Front-End</span>
           <p class="empresa-texto">
-            Nesse projeto para a apresentação do trabalho de conclusão de curso,
-            um colega e eu utilizamos bootstrap.
+            Nesse projeto para a apresentação do trabalho de conclusão de curso, fiz um projeto visando a introdução do projeto à bancada de profissionais.
           </p>
           <ul class="empresa-habilidades">
             <li>HTML</li>
@@ -106,7 +102,7 @@
           </h3>
           <span class="empresa-titulo">Front-End</span>
           <p class="empresa-texto">
-            Nesse projeto eu utilizei em sua maior parte JS, trabalhando os conceitos essênciais de JavaScript e concretizando os fundamentos do curso.
+            Nesse projeto visei a aprendizagem de conceitos JS, onde desenvolvi muitas funcionalidades utilizando a linguagem.
           </p>
           <ul class="empresa-habilidades">
             <li>HTML</li>
