--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <header class="header">
       <a href="https://github.com/kkkkkaua"><img src="./assets/img/kaua.svg" alt="Kaua" width="104" height="38" /></a>
-      <nav>
+      <nav data-suave>
         <ul class="header-menu">
           <li><a href="#experiencia">Experiência</a></li>
           <li><a class="a1" href="#formacao">Formação</a></li>
@@ -224,6 +224,6 @@
     </footer>
     <script src="index.js" type="module"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
-    <script src="./assets/js/index.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
