--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </li>
 
             <li class="faculdade">
-              <span class="faculdade-tipo">JavaScript ES6 Completo</span>
+              <a href="https://www.origamid.com/certificate/e3ddc414" class="faculdade-tipo">JavaScript ES6 Completo</a>
               <h3 class="faculdade-curso">Nivel: Avançado</h3>
               <span class="faculdade-instituicao">74 Horas</span>
             </li>
