--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
           <ul class="faculdade-lista">
             <li class="faculdade">
               <a class="faculdade-tipo">React Completo</a>
-              <h3 class="faculdade-curso">Nivel: Avançado</h3>
-              <span class="faculdade-instituicao">Coming Soon...</span>
+              <h3 class="faculdade-curso">Nivel: Avançado (0% pronto)</h3>
+              <span class="faculdade-instituicao">36 Horas</span>
             </li>
             
             <li class="faculdade">
