--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
 
     <main class="introducao">
-      <img src="./assets/img/81395993_2557487207912078_4606950189918322688_n(5).png" alt="Foto do Dev" width="360" height="520" />
+      <img src="./assets/img/perfil.png" alt="Foto do Dev" width="360" height="520" />
       <div>
         <h1>Estudante<br />Front End<br /></h1>
         <span class="typing text"></span>
