--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main class="introducao">
       <img src="./assets/img/perfil.png" alt="Foto do Dev" width="360" height="520" />
       <div>
-        <h1>Estudante<br />Front End<br /></h1>
+        <h1>Estudante<br />Front-End<br /></h1>
         <span class="typing text"></span>
       </div>
     </main>
