--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Kauã | Portfolio</title>
     <meta
       name="description"
-      content="Desenvolvedor Front End e UX/UI Designer Localizado no Rio de Janeiro"
+      content="Desenvolvedor Front End Localizado em São Paulo"
     />
     <link rel="stylesheet" href="./assets/css/style.css
     "/>
