--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
           
           <ul class="faculdade-lista">
             <li class="faculdade">
-              <a class="faculdade-tipo">React Completo</a>
-              <h3 class="faculdade-curso">Nivel: Avançado (10% pronto)</h3>
-              <span class="faculdade-instituicao">36 Horas</span>
+              <a class="faculdade-tipo">Python3 e orientação a objetos</a>
+              <h3 class="faculdade-curso">Nivel: Avançado <br>(2/9 cursos feitos)</h3>
+              <span class="faculdade-instituicao">93 Horas</span>
             </li>
             
             <li class="faculdade">
